# tangcloud

dictserice/elixirversion/: .credo.exs  .gitignore  Dockerfile  Procfile  README.md  fabfile.py  mix.exs
dictserice/elixirversion/config/: config.exs  dev.exs  prod.exs  test.exs
dictserice/elixirversion/dev/: Dockerfile
dictserice/elixirversion/lib/: elixirversion.ex  elixirversion_web.ex
dictserice/elixirversion/lib/elixirversion/: application.ex  endpoint.ex
dictserice/elixirversion/lib/elixirversion_web/: endpoint.ex  gettext.ex  router.ex
dictserice/elixirversion/priv/: static
dictserice/elixirversion/rel/: config.exs
dictserice/elixirversion/test/support/: channel_case.ex  conn_case.ex
dictserice/elixirversion/test/views/: error_view_test.exs
dictserice/elixirversion/web/: gettext.ex  router.ex  web.ex
dictserice/goversion/src/dictservice/: Procfile  (+7 more)
dictserice/kotlin_springboot_version/: build.gradle
dictserice/kotlin_vertx_version/: .gitignore  build.gradle  settings.gradle
dictserice/kotlinversion/: .gitignore  build.gradle  fabfile.py  settings.gradle
dictserice/public/: .gitignore  fabfile.py  index.html
dictserice/public/conf/: nginx.conf
dictserice/public/js/: app.js  ping.js
dictserice/public/www/: index.html
dictserice/rust_rocket_version/: .gitignore  Cargo.toml  Rocket.toml  fabfile.py
dictserice/rust_rocket_version/src/: dict.rs  lib.rs  main.rs  types.rs  webroot.rs
dictserice/rust_rocket_version/src/services/: mod.rs
dictserice/rust_rocket_version/src/web/: dict.rs  fairings.rs  mod.rs  routes.rs  webroot.rs
dictserice/rust_rocket_version/src/web/api/: dict.rs  mod.rs
dictserice/rust_rocket_version/src/web/controllers/: webroot.rs
dictserice/rust_rocket_version/src/web/controllers/api/: dict.rs  mod.rs
dictserice/rustversion/: .gitignore  Cargo.toml  README.md  fabfile.py
dictserice/rustversion/config/: log4rs.toml
dictserice/rustversion/src/: global.rs  handles.rs  main.rs  middlewares.rs  models.rs  types.rs  utils.rs
dictserice/swiftversion/: .gitignore  CMakeLists.txt  Package.swift  Public  fabfile.py  license
(+73 files in other folders)
