[package]
authors = ["itang <live.tang@gmail.com>"]
name = "rust_rocket_version"
version = "0.1.0"

[dependencies]
redis = "0.8.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git"}
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git"}
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git"}
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"
time = "0.1.36"

[[bin]]
name = "rust_rocket_version"
#src = "bin/main.rs"
