[package]
authors = ["itang <live.tang@gmail.com>"]
name = "rustversion"
version = "0.1.0"

[dependencies]
bodyparser = "0.6.0"
hyper = "0.10.4"
iron = "0.5.1"
lazy_static = "0.2.1"
log = "0.3.6"
mount = "0.3.0"
r2d2 = "0.7.1"
redis = "0.7.1"
router = "0.5.1"
serde = "0.9.6"
serde_derive = "0.9.6"
serde_json = "0.9.5"
time = "0.1.35"

[dependencies.log4rs]
features = ["toml_format"]
version = "0.5.0"

[dependencies.r2d2_redis]
git = "https://github.com/sorccu/r2d2-redis"
